--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build"
+  command = "npm run build && cd functions/node-fetch && npm install"
   functions = "functions"
   publish = "dist"
